<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/choose_from_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_library"
        />

    <Button
        android:id="@+id/use_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Use Camera"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thumbnail"
        android:adjustViewBounds="true"
        android:layout_weight="1"
        />

    <EditText
        android:id="@+id/upload_message"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:hint="@string/upload_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadImage"
        android:clickable="false"
        android:id="@+id/upload_to_server"
        />

</LinearLayout>
